--- a/app/src/main/res/layout/frg_forgot_password.xml
+++ b/app/src/main/res/layout/frg_forgot_password.xml
@@ -6,13 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btnBackToLogin"
-        style="@style/IconButtonBack"
-        android:drawableLeft="@drawable/ic_arrow_back"
+    <ImageButton
+        android:id="@+id/btnBack"
+        style="@style/Btn_Back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="RtlHardcoded,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/lblForgotPasswordHeading1"
@@ -33,13 +32,14 @@
     <TextView
         android:id="@+id/titleForgotPassword"
         style="@style/TextBody"
+        android:layout_marginTop="@dimen/body_top_gap"
         android:text="@string/title_forgot_password"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblForgotPasswordHeading2" />
 
     <EditText
         android:id="@+id/txtForgotEmail"
-        style="@style/PrimaryTextField"
+        style="@style/Txt_Primary"
         android:autofillHints=""
         android:hint="@string/hint_email"
         android:inputType="textEmailAddress"
@@ -59,8 +59,9 @@
 
     <Button
         android:id="@+id/btnContinue"
-        style="@style/PrimaryButtonLarge"
+        style="@style/Btn_Primary"
         android:enabled="false"
+        android:layout_width="match_parent"
         android:text="@string/btn_continue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
