--- a/app/src/main/res/layout/frg_reset_password.xml
+++ b/app/src/main/res/layout/frg_reset_password.xml
@@ -6,13 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
+    <ImageButton
         android:id="@+id/btnBack"
-        style="@style/IconButtonBack"
-        android:drawableLeft="@drawable/ic_arrow_back"
+        style="@style/Btn_Back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="RtlHardcoded,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/lblResetPasswordHeading1"
@@ -33,6 +32,7 @@
     <TextView
         android:id="@+id/titleForgotPassword"
         style="@style/TextBody"
+        android:layout_marginTop="@dimen/body_top_gap"
         android:text="@string/validate_password_format"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblResetPasswordHeading1.1"
@@ -40,14 +40,14 @@
 
     <RelativeLayout
         android:id="@+id/grpTxtPassword"
-        style="@style/TextFieldWithIconWrapper"
+        style="@style/Txt_Container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleForgotPassword">
 
         <EditText
             android:id="@+id/txtResetPassword"
-            style="@style/PrimaryTextFieldWithIcon"
+            style="@style/Txt_With_Icon"
             android:autofillHints=""
             android:hint="@string/hint_password_new"
             android:inputType="textPassword"
@@ -57,8 +57,8 @@
 
         <ToggleButton
             android:id="@+id/tglShowPassword"
-            style="@style/TextFieldIcon"
-            android:background="@drawable/ic_visibility_selector"
+            style="@style/Tgl_Md_0"
+            android:drawableTop="@drawable/ic_visibility_selector"
             tools:ignore="RelativeOverlap,TouchTargetSizeCheck,TextSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />
     </RelativeLayout>
 
@@ -73,14 +73,14 @@
 
     <RelativeLayout
         android:id="@+id/grpTxtConfirmPassword"
-        style="@style/TextFieldWithIconWrapper"
+        style="@style/Txt_Container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblResetPasswordErrorMsg1">
 
         <EditText
             android:id="@+id/txtResetConfirmPassword"
-            style="@style/PrimaryTextFieldWithIcon"
+            style="@style/Txt_With_Icon"
             android:autofillHints=""
             android:hint="@string/hint_confirm_password_new"
             android:inputType="textPassword"
@@ -90,8 +90,8 @@
 
         <ToggleButton
             android:id="@+id/tglShowConfirmPassword"
-            style="@style/TextFieldIcon"
-            android:background="@drawable/ic_visibility_selector"
+            style="@style/Tgl_Md_0"
+            android:drawableTop="@drawable/ic_visibility_selector"
             tools:ignore="RelativeOverlap,TouchTargetSizeCheck,TextSizeCheck,TextContrastCheck" />
     </RelativeLayout>
 
@@ -106,8 +106,9 @@
 
     <Button
         android:id="@+id/btnUpdatePassword"
-        style="@style/PrimaryButtonLarge"
+        style="@style/Btn_Primary"
         android:enabled="false"
+        android:layout_width="match_parent"
         android:text="@string/btn_update_password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
