--- a/app/src/main/res/layout/frg_create_account_part1.xml
+++ b/app/src/main/res/layout/frg_create_account_part1.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/mainLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btnBackToLogin"
-        style="@style/IconButtonBack"
-        android:drawableLeft="@drawable/ic_arrow_back"
+    <ImageButton
+        android:id="@+id/btnBack"
+        style="@style/Btn_Back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="RtlHardcoded,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/lblPgNumCreateAccount1"
-        style="@style/PageNumber"
+        style="@style/Lbl_PageNumber"
         android:text="@string/pg_num_1"
+        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/btnBack" />
 
     <TextView
         android:id="@+id/lblCreateAccountHeading1"
@@ -40,22 +40,25 @@
     <TextView
         android:id="@+id/titleOnCreateAccountPart1"
         style="@style/TextBody"
+        android:layout_marginTop="@dimen/body_top_gap"
         android:text="@string/title_create_personal_info"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblCreateAccountHeading1.1" />
 
-    r<Spinner
+    <Spinner
         android:id="@+id/cmbGender"
         style="@style/SpinnerGender"
+        android:layout_width="72dp"
         android:layout_marginTop="8dp"
         android:entries="@array/arr_gender"
+        app:layout_constraintEnd_toStartOf="@+id/txtNewFirstName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleOnCreateAccountPart1"
         tools:ignore="TextSizeCheck" />
 
     <EditText
         android:id="@+id/txtNewFirstName"
-        style="@style/PrimaryTextField"
+        style="@style/Txt_Primary"
         android:layout_width="0dp"
         android:layout_marginStart="8dp"
         android:autofillHints=""
@@ -68,7 +71,7 @@
 
     <EditText
         android:id="@+id/txtNewLastName"
-        style="@style/PrimaryTextField"
+        style="@style/Txt_Primary"
         android:autofillHints=""
         android:hint="@string/hint_last_name"
         android:inputType="textPersonName|textCapSentences"
@@ -79,14 +82,14 @@
 
     <RelativeLayout
         android:id="@+id/grpBirthDate"
-        style="@style/TextFieldWithIconWrapper"
+        style="@style/Txt_Container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNewLastName">
 
         <EditText
             android:id="@+id/txtNewBirthDate"
-            style="@style/PrimaryTextFieldWithIcon"
+            style="@style/Txt_With_Icon"
             android:autofillHints=""
             android:focusable="false"
             android:focusableInTouchMode="false"
@@ -97,11 +100,11 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btnCalendar"
-            style="@style/TextFieldIcon"
-            android:background="@drawable/ic_calendar_month"
-            tools:ignore="RelativeOverlap,TouchTargetSizeCheck,TextSizeCheck,TextContrastCheck,SpeakableTextPresentCheck" />
+            style="@style/Btn_Md_0"
+            android:src="@drawable/ic_calendar_month"
+            tools:ignore="ContentDescription,RelativeOverlap,SpeakableTextPresentCheck,TextContrastCheck,TextSizeCheck,TouchTargetSizeCheck" />
     </RelativeLayout>
 
     <TextView
@@ -111,11 +114,12 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/grpBirthDate"/>
+        app:layout_constraintTop_toBottomOf="@+id/grpBirthDate" />
 
     <Button
         android:id="@+id/btnContinueCreateAccountToPart2"
-        style="@style/PrimaryButtonLarge"
+        style="@style/Btn_Primary"
+        android:layout_width="match_parent"
         android:enabled="false"
         android:text="@string/btn_continue"
         app:layout_constraintBottom_toBottomOf="parent"
