--- a/app/src/main/res/layout/frg_otp.xml
+++ b/app/src/main/res/layout/frg_otp.xml
@@ -6,13 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
+    <ImageButton
         android:id="@+id/btnBack"
-        style="@style/IconButtonBack"
-        android:drawableLeft="@drawable/ic_arrow_back"
+        style="@style/Btn_Back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="RtlHardcoded,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/lblOTPHeading1"
@@ -41,7 +40,7 @@
 
     <EditText
         android:id="@+id/txtOTP"
-        style="@style/PrimaryTextField"
+        style="@style/Txt_Primary"
         android:autofillHints=""
         android:hint="@string/hint_otp"
         android:inputType="number"
@@ -62,7 +61,7 @@
 
     <Button
         android:id="@+id/btnResend"
-        style="@style/LabelButton"
+        style="@style/Btn_Label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -75,8 +74,9 @@
 
     <Button
         android:id="@+id/btnVerify"
-        style="@style/PrimaryButtonLarge"
+        style="@style/Btn_Primary"
         android:enabled="false"
+        android:layout_width="match_parent"
         android:text="@string/btn_verify"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
