--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="neutral_500">#FF757575</color>
     <color name="neutral_700">#FF575757</color>
     <color name="neutral_900">#FF323232</color>
-    <color name="accent_50">#FFF3FFFD</color>
+    <color name="accent_50">#E0F2F1</color>
     <color name="accent_100">#A5D6CE</color>
     <color name="accent_500">#FF0CA688</color>
     <color name="accent_700">#FF00796B</color>
